# rust-api-tools

./: Cargo.toml
.github/workflows/: test.yaml
src/: lib.rs
src/api/: mod.rs
src/api/message/: fields.rs  from_bytes.rs  message.rs  message_kind.rs  mod.rs  msg_kind.rs  parse_data.rs  parse_id.rs  parse_kind.rs  parse_size.rs  parse_syn.rs
src/api/reply/: api_reply.rs
src/api/socket/: connection_status.rs  mod.rs  tcp_socket.rs
src/client/: api_query.rs  api_reply.rs  api_request.rs  mod.rs
src/debug/: dbg_id.rs
src/error/: api_error.rs  mod.rs  str_err.rs
src/reply/: api_reply.rs  mod.rs
src/server/: mod.rs
src/server/api_query/: api_query.rs  api_query_error.rs  api_query_executable.rs  api_query_python.rs  api_query_sql.rs  api_query_type.rs  api_query_unknown.rs
src/server/reply/: api_reply.rs
src/tcp/: mod.rs  tcp_client_connect.rs
src/tests/unit/: mod.rs  socket_timeout_test.rs  tcp_read_timeout_test.rs  template_test.rs
src/tests/unit/api/: mod.rs
src/tests/unit/api/message/: message_build_test.rs  message_parse_test.rs  mod.rs  parse_data_test.rs  parse_id_test.rs  parse_kind_test.rs  parse_size_test.rs  parse_syn_test.rs  vec_concat_test.rs
src/tests/unit/api/reply/: api_reply_test.rs  api_server_reply_test.rs  mod.rs
src/tests/unit/api/socket/: mod.rs  socket_close_test.rs  socket_timeout_test.rs  tcp_socket_test.rs
src/tests/unit/client/: api_query_test.rs  api_reply_test.rs  api_request_test.rs  mod.rs  prepare_postgres.rs  setup-build.sh  setup-run.sh  setup.sh
src/tests/unit/error/: api_error_test.rs  mod.rs
src/tests/unit/reply/: api_reply_test.rs
src/tests/unit/server/: mod.rs
src/tests/unit/server/api_query/: api_query_test.rs
src/tests/unit/server/reply/: api_reply_test.rs  mod.rs
