[package]
name = "api-tools"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.11"

testing = { git = "https://github.com/a-givertzman/rust-testing.git", version = "0.0.1" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", version = "0.0.1" }

indexmap = {version = "^2.1", features = ["serde"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[lib]
doctest = false