[package]
name = "api-tools"
version = "0.2.1"
edition = "2024"
#
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
# update dependencies using command
# rm ./Cargo.lock &&  cargo clean && cargo update

[dependencies]
log = "~0.4"
env_logger = "~0.11"
#
# date & time
chrono = "~0.4"
#
sal-core = { git = "https://github.com/a-givertzman/rust-sal-core.git", tag = "0.1.0" }
testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
#
# Collections
indexmap = {version = "~2.11", features = ["serde"] }
#
# Serde
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
#
# Database
postgres = { version = "~0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }

[lib]
doctest = false